fix: block overflow fixes #45

--- a/scss/_block.scss
+++ b/scss/_block.scss
@@ -8,6 +8,10 @@ html {
 
     overflow-y: auto;
 
+    .block-output {
+      overflow-y: hidden;
+    }
+
     pre {
       border-radius: 0;
     }
